--- a/src/Home.css
+++ b/src/Home.css
@@ -9,7 +9,7 @@
 
 /* ===== HERO SECTION ===== */
 #home_background_image {
-  background-image: url('image/1.jpg');
+  background-image: url('/image/1.jpg');
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
